--- a/styles/style.scss
+++ b/styles/style.scss
@@ -156,3 +156,18 @@ header {
 		font-size: 32px;
 	}
 }
+.dots {
+	display: flex;
+	gap: 1.5rem;
+	margin-top: 120px;
+	.dot {
+		cursor: pointer;
+		width: 15px;
+		height: 15px;
+		background-color: #979797;
+		border-radius: 50%;
+		&.active {
+			background-color: #fff;
+		}
+	}
+}
