--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap');
 /* Box sizing rules */
 *,
 *::before,
@@ -74,6 +74,11 @@ select {
 		scroll-behavior: auto !important;
 	}
 }
+.wrapper {
+	max-width: 1110px;
+	width: 100%;
+	margin: 0 auto;
+}
 .background {
 	z-index: -1;
 	position: absolute;
@@ -140,6 +145,23 @@ header {
 		font-size: 18px;
 	}
 }
+.boxWrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	right: 150px;
+	bottom: 55px;
+	border-radius: 50%;
+	width: 450px;
+	height: 450px;
+	text-decoration: none;
+	transition: background-color 0.6s;
+	cursor: pointer;
+	&:hover {
+		background-color: rgba(255, 255, 255, 0.2);
+	}
+}
 .mainBox {
 	background-color: #fff;
 	width: 274px;
@@ -147,15 +169,14 @@ header {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	position: absolute;
-	right: 150px;
-	bottom: 150px;
 	border-radius: 50%;
 	.boxText {
 		display: flex;
 		font-size: 32px;
+		color: #000;
 	}
 }
+
 .dots {
 	display: flex;
 	gap: 1.5rem;
