--- a/styles/style.scss
+++ b/styles/style.scss
@@ -74,20 +74,43 @@ select {
 		scroll-behavior: auto !important;
 	}
 }
+@media (min-width: 1036px) {
+	.homePage {
+		.wrapper {
+			align-items: flex-end;
+		}
+	}
+}
 .wrapper {
 	max-width: 1440px;
 	width: 100%;
 	margin: 0 auto;
+	display: flex;
+	padding-top: 76px;
+	justify-content: space-between;
+	min-height: calc(100vh - 136px);
+	padding-bottom: 136px;
+	gap: 1rem;
+	@media (max-width: 990px) {
+		min-height: calc(100vh - 96px);
+	}
+	@media (max-width: 1036px) {
+		padding-top: 106px;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
 	@media (max-width: 1600px) {
-		padding: 0 4rem;
+		padding-inline: 4rem;
 	}
 }
 .background {
 	z-index: -1;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 100vh;
 	object-fit: cover;
+	inset: 0;
 }
 header {
 	display: flex;
@@ -98,10 +121,16 @@ header {
 	@media (max-width: 990px) {
 		height: 96px;
 		padding-top: 0;
+		padding-left: 30px;
 	}
 }
 .logo {
 	flex-grow: 0;
+}
+@media (min-width: 570px) {
+	.menuButton {
+		display: none;
+	}
 }
 @media (max-width: 570px) {
 	.menuButton {
@@ -225,27 +254,11 @@ header {
 		}
 	}
 }
-.homePage {
-	.wrapper {
-		display: flex;
-		justify-content: space-between;
-		height: calc(100vh - 136px);
-		align-items: flex-end;
-		padding-bottom: 136px;
-		gap: 1rem;
-		@media (max-width: 1036px) {
-			padding-top: 106px;
-			justify-content: center;
-			align-items: center;
-			flex-direction: column;
-		}
-	}
-}
 .textWrapper {
-	width: 450px;
-	height: 382px;
+	width: 100%;
+	max-width: 450px;
 	color: #d0d6f9;
-	.text {
+	.name {
 		font-family: 'Barlow Condensed';
 		font-size: 28px;
 	}
@@ -254,14 +267,28 @@ header {
 		font-size: 150px;
 		color: #fff;
 	}
-	.explain {
+	.text {
 		font-family: 'Barlow';
 		font-size: 18px;
 	}
 	@media (max-width: 990px) {
+		.name,
 		.text,
-		.explain {
+		.textTitle {
 			text-align: center;
+		}
+	}
+	@media (max-width: 570px) {
+		.textTitle {
+			font-size: 80px;
+		}
+		.text {
+			font-size: 15px;
+		}
+	}
+	@media (max-width: 380px) {
+		.textTitle {
+			font-size: 60px;
 		}
 	}
 }
@@ -272,7 +299,8 @@ header {
 	position: relative;
 	top: 100px;
 	border-radius: 50%;
-	width: 450px;
+	width: 100%;
+	max-width: 450px;
 	height: 450px;
 	text-decoration: none;
 	transition: background-color 0.6s;
@@ -293,6 +321,10 @@ header {
 		display: flex;
 		font-size: 32px;
 		color: #000;
+	}
+	@media (max-width: 570px) {
+		width: 150px;
+		height: 150px;
 	}
 }
 
