--- a/styles/crew.scss
+++ b/styles/crew.scss
@@ -17,11 +17,88 @@
 		font-family: 'Barlow';
 		font-size: 18px;
 		color: #d0d6f9;
-		width: 444px;
+		width: 100%;
+		max-width: 444px;
 	}
 }
 .crewImg {
-	position: absolute;
-	bottom: 0;
-	right: 130px;
+	display: flex;
+	align-items: flex-end;
+	flex-shrink: 0;
+}
+.crew {
+	padding-bottom: 0;
+}
+@media (max-width: 1036px) {
+	.dots {
+		margin-top: 40px;
+	}
+	.flex {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		.title {
+			margin-top: 0;
+			font-size: 24px;
+		}
+		.text {
+			max-width: 600px;
+		}
+		.name {
+			font-size: 40px;
+		}
+	}
+	.crewImg {
+		img {
+			width: 380px;
+		}
+	}
+	.crew {
+		padding-bottom: 0;
+		.mainText {
+			margin-bottom: 60px;
+		}
+	}
+}
+@media (min-width: 570px) {
+	.mainText2 {
+		display: none;
+	}
+}
+@media (max-width: 570px) {
+	.dots {
+		margin-block: 20px;
+	}
+	.mainText2 {
+		margin: 0;
+	}
+	.flex {
+		flex-direction: column-reverse;
+		.title {
+			font-size: 16px;
+		}
+		.text {
+			max-width: 320px;
+			font-size: 15px;
+		}
+		.name {
+			font-size: 24px;
+		}
+	}
+	.crewImg {
+		align-items: center;
+		border-bottom: 1px solid #383b4b;
+		img {
+			width: 180px;
+		}
+	}
+	.crew {
+		flex-direction: column-reverse;
+		min-height: auto;
+		padding-top: 60px;
+		.mainText {
+			display: none;
+		}
+	}
 }
