--- a/styles/destination.scss
+++ b/styles/destination.scss
@@ -1,13 +1,3 @@
-.mainText {
-	color: #fff;
-	font-size: 28px;
-	font-family: 'Barlow';
-	margin-bottom: 97px;
-
-	span {
-		color: #4f5158;
-	}
-}
 .destination {
 	gap: 3rem;
 	.imgWrapper {
@@ -94,11 +84,6 @@
 		.planetImg {
 			width: 300px;
 		}
-		.mainText {
-			font-size: 20px;
-			position: absolute;
-			left: 40px;
-		}
 		.planet {
 			margin-top: 0;
 			display: flex;
@@ -106,6 +91,28 @@
 			flex-direction: column;
 			.text {
 				text-align: center;
+			}
+		}
+	}
+	@media (max-width: 570px) {
+		padding-top: 0;
+		.imgWrapper {
+			margin-top: 0;
+		}
+		.planet {
+			.title {
+				font-size: 60px;
+			}
+			.text {
+				font-size: 15px;
+			}
+		}
+		.infoWrapper {
+			display: flex;
+			flex-direction: column;
+			text-align: center;
+			.distance {
+				margin-right: 0;
 			}
 		}
 	}
