--- a/styles/technology.scss
+++ b/styles/technology.scss
@@ -1,9 +1,16 @@
+.technology2 {
+	min-height: calc(100vh - 253px);
+	padding-bottom: 0;
+	padding-top: 0;
+}
+
 .technology {
 	display: flex;
-	gap: 2rem;
+	gap: 3rem;
 	margin-top: 137px;
 	.content {
-		width: 470px;
+		width: 100%;
+		max-width: 470px;
 		color: #d0d6f9;
 		.title {
 			margin-top: 11px;
@@ -16,11 +23,14 @@
 			font-family: 'Barlow';
 		}
 	}
-	.imgWrapper {
-		position: absolute;
-		right: 0;
-		top: 0;
-		margin-top: 68px;
+}
+.imgWrapper {
+	max-width: 517px;
+	width: 100%;
+	margin-top: 50px;
+	flex-shrink: 0;
+	img {
+		width: 100%;
 	}
 }
 .circles {
@@ -45,5 +55,55 @@
 		&:hover {
 			border-color: #fff;
 		}
+	}
+}
+.mainText3 {
+	margin-top: 75px;
+	margin-left: 165px;
+	margin-bottom: 0;
+}
+@media (max-width: 1190px) {
+	.technology2 {
+		display: flex;
+		flex-direction: column-reverse;
+		text-align: center;
+		align-items: center;
+		padding-inline: 0;
+		padding-bottom: 3rem;
+
+		.circles {
+			flex-direction: row;
+			justify-content: center;
+		}
+		.technology {
+			flex-direction: column;
+			margin-top: 56px;
+		}
+		.imgWrapper {
+			max-width: 100%;
+			flex-direction: column-reverse;
+		}
+	}
+}
+@media (max-width: 1036px) {
+	.mainText3 {
+		margin-left: 0;
+		text-align: center;
+	}
+	.technology .content {
+		.title {
+			font-size: 40px;
+		}
+		.text {
+			font-size: 16px;
+		}
+	}
+}
+@media (max-width: 570px) {
+	.technology .content {
+		padding-inline: 1rem;
+	}
+	.mainText3 {
+		margin-top: 0;
 	}
 }
